--- a/package.json
+++ b/package.json
@@ -9,14 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@greatsumini/react-facebook-login": "^3.3.3",
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.17.0",
+    "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@types/redux-logger": "^3.0.13",
     "framer-motion": "^11.3.9",
+    "moment": "^2.30.1",
     "next": "14.2.5",
     "qs": "^6.12.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-google-recaptcha": "^3.1.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
